# pl-bulk-rename

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  chris_plugin_info.json
.github/workflows/: ci.yml
examples/input/a/: log
examples/input/b/: log
examples/input/c/: log
src/: main.rs
